Fixed: wflow-consoleweb - Mobile - Web console with flexigrid tables on iOS not showing responsive mobile view @7.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/v7.css
+++ b/wflow-consoleweb/src/main/webapp/css/v7.css
@@ -1655,6 +1655,9 @@ body.webconsole #main-header, body.webconsole #footer, body.webconsole #adminBar
     /* jquery ui */
 
     /* flexigrid tables */
+    body .flexigrid {
+        max-width: 90vw;
+    }
     body .flexigrid div.pDiv .pDiv2 > div:nth-child(10),
     body .flexigrid div.pDiv .pDiv2 > div:nth-child(11){
         display: none;
